<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="net.minpro.todo.MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:orderInCategory="101" android:id="@+id/menu_delete" android:title="@string/delete"
          android:icon="@drawable/ic_delete_black_24dp" app:showAsAction="ifRoom"/>
    <item android:title="@string/edit" android:orderInCategory="101" android:id="@+id/menu_edit"
          android:icon="@drawable/ic_edit_black_24dp" app:showAsAction="ifRoom"/>
    <item android:title="@string/register" android:orderInCategory="101" android:id="@+id/menu_register"
          android:icon="@drawable/ic_done_black_24dp" app:showAsAction="ifRoom"/>
</menu>
