<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".EditFragment">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/inputTitle">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" android:id="@+id/inputTitleText"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="6" android:id="@+id/inputDate">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/deadline" android:inputType="date" android:id="@+id/inputDateText"/>
            </android.support.design.widget.TextInputLayout>
            <ImageButton
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/imageButtonDataSet"
                    android:layout_weight="1"/>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_detail" android:id="@+id/inputDetailText"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <CheckBox
            android:text="@string/check_if_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>
</android.support.constraint.ConstraintLayout>